@@ -30,24 +30,22 @@ import org.apache.syncope.common.lib.to.UserTO;
 import org.apache.syncope.common.lib.types.AnyTypeKind;
 import org.apache.syncope.common.lib.types.CipherAlgorithm;
 import org.apache.syncope.core.persistence.api.dao.UserDAO;
-import org.apache.syncope.core.provisioning.api.job.JobExecutionException;
+import org.apache.syncope.core.provisioning.api.pushpull.InboundActions;
 import org.apache.syncope.core.provisioning.api.pushpull.ProvisioningProfile;
-import org.apache.syncope.core.provisioning.api.pushpull.PullActions;
-import org.identityconnectors.common.security.GuardedString;
 import org.identityconnectors.common.security.SecurityUtil;
 import org.identityconnectors.framework.common.objects.AttributeUtil;
+import org.identityconnectors.framework.common.objects.LiveSyncDelta;
 import org.identityconnectors.framework.common.objects.OperationalAttributes;
-import org.identityconnectors.framework.common.objects.SyncDelta;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.transaction.annotation.Transactional;
 
 /**
- * A {@link org.apache.syncope.core.provisioning.api.pushpull.PullActions} implementation which allows the ability to
+ * A {@link org.apache.syncope.core.provisioning.api.pushpull.InboundActions} implementation which allows the ability to
  * import passwords from an LDAP backend that are hashed.
  */
-public class LDAPPasswordPullActions implements PullActions {
+public class LDAPPasswordPullActions implements InboundActions {
 
     protected static final Logger LOG = LoggerFactory.getLogger(LDAPPasswordPullActions.class);
 
@@ -59,10 +57,10 @@ public class LDAPPasswordPullActions implements PullActions {
         if (AnyTypeKind.USER.name().equals(provision.getAnyType())) {
             return Set.of(OperationalAttributes.PASSWORD_NAME);
         }
-        return PullActions.super.moreAttrsToGet(profile, provision);
+        return InboundActions.super.moreAttrsToGet(profile, provision);
     }
 
-    private static Optional<Pair<String, CipherAlgorithm>> parseEncodedPassword(final String password) {
+    protected Optional<Pair<String, CipherAlgorithm>> parseEncodedPassword(final String password) {
         if (password != null && password.startsWith("{")) {
             String digest = Optional.ofNullable(
                     password.substring(1, password.indexOf('}'))).map(String::toUpperCase).
@@ -82,21 +80,22 @@ public class LDAPPasswordPullActions implements PullActions {
     @Override
     public void after(
             final ProvisioningProfile<?, ?> profile,
-            final SyncDelta delta,
+            final LiveSyncDelta delta,
             final EntityTO entity,
-            final ProvisioningReport result) throws JobExecutionException {
+            final ProvisioningReport result) {
 
         if (entity instanceof UserTO) {
             userDAO.findById(entity.getKey()).ifPresent(user -> {
-                GuardedString passwordAttr = AttributeUtil.getPasswordValue(delta.getObject().getAttributes());
-                if (passwordAttr != null) {
-                    parseEncodedPassword(SecurityUtil.decrypt(passwordAttr)).ifPresent(encoded -> {
-                        byte[] encodedPasswordBytes = Base64.getDecoder().decode(encoded.getLeft().getBytes());
-                        String encodedHexStr = DatatypeConverter.printHexBinary(encodedPasswordBytes).toUpperCase();
+                Optional.ofNullable(AttributeUtil.getPasswordValue(delta.getObject().getAttributes())).
+                        flatMap(attr -> parseEncodedPassword(SecurityUtil.decrypt(attr))).
+                        ifPresent(encoded -> {
+                            String encodedHexStr = DatatypeConverter.printHexBinary(
+                                    Base64.getDecoder().decode(encoded.getLeft().getBytes())).
+                                    toUpperCase();
 
-                        user.setEncodedPassword(encodedHexStr, encoded.getRight());
-                    });
-                }
+                            user.setEncodedPassword(encodedHexStr, encoded.getRight());
+                            userDAO.save(user);
+                        });
             });
         }
     }
