@@ -18,9 +18,8 @@
  */
 package org.apache.syncope.fit.core.reference;
 
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.Set;
 import org.apache.syncope.common.lib.types.OpEvent;
@@ -67,9 +66,9 @@ public class TestFileAuditProcessor implements AuditEventProcessor {
         String fileName = System.getProperty("syncope.log.dir") + "/audit_for_" + domain + "_file";
         String content = POJOHelper.serialize(auditEventDAO.toAuditEventTO(event)) + '\n';
         try {
-            Files.write(
-                    Paths.get(fileName),
-                    content.getBytes(StandardCharsets.UTF_8),
+            Files.writeString(
+                    Path.of(fileName),
+                    content,
                     StandardOpenOption.CREATE, StandardOpenOption.APPEND);
         } catch (Exception e) {
             LOG.error("Could not append audit event {} to file {}", event, fileName, e);
